--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL=http://localhost:8080
+NEXT_PUBLIC_API_BASE_URL=https://99625203ee61.ngrok-free.app
+NEXT_PUBLIC_APP_ENV=development
